try to fix viewport on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -42,18 +42,12 @@ select {
   color: inherit;
 }
 
-#root {
-  display: flex;
-  flex-direction: column;
+body {
   height: 100vh;
 }
 
-.feather {
-  width: 36px;
-  height: 36px;
-  stroke: currentColor;
-  stroke-width: 2;
-  stroke-linecap: round;
-  stroke-linejoin: round;
-  fill: none;
+#root {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
